# sitefeed

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: sitefeed.yml
sitefeed/: __main__.py  entrypoint.py  exporters.py  items.py  settings.py  spiders.py  utils.py
