[project]
name = "sitefeed"
version = "1.0"
requires-python = ">=3.11"
dependencies = [
  "scrapy~=2.11",
  "readability-lxml@git+https://github.com/buriy/python-readability.git",
  "lxml_html_clean~=0.2", # via readability-lxml
]

[project.scripts]
sitefeed = "sitefeed.entrypoint:crawl"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sitefeed"]

[tool.pyright]
disableOrganizeImports = true
useLibraryCodeForTypes = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
