[project]
name = "sitefeed"
version = "2.0"
requires-python = ">=3.12"
dependencies = [
  "scrapy~=2.14",
  "lxml_html_clean~=0.4",
]

[project.scripts]
sitefeed = "sitefeed.entrypoint:crawl"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sitefeed"]

[tool.pyright]
disableOrganizeImports = true
useLibraryCodeForTypes = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
